grammar/test/corpus/entries.txt
===
14= first has gap
===

key=value
---
(file
	(entry
		(gap)
		(key
			(line))
		(text
			(line))))

===
15= first has key comment 1 line
===
// a short paragraph about the key that follows
key=value
---
(file
	(entry
		(comment
			(line))
		(key
			(line))
		(text
			(line))))

===
16= first has key comment 3 lines
===
// a short paragraph about the key that follows
	# this is a markdown H1
	and another short paragraph
key=value
---
(file
	(entry
		(comment
			(line)
			(line)
			(line))
		(key
			(line))
		(text
			(line))))

===
17= first has gap and key comment
===

// a longer paragraph
	about the key that follows
key=value
---
(file
	(entry
		(gap)
		(comment
			(line)
			(line))
		(key
			(line))
		(text
			(line))))

===
18= angle brackets open a text block
===
<any <chars> # [except] @ {LF} allowed>
	start of text block, just one LF char here:
	the last line of text block has no LF at end
---
(file
	(entry
		(key
			(line))
		(text
			(line)
			(line))))

===
19= square brackets open a list context
===
[any <chars> # [except] @ {LF} allowed]
---
(file
	(entry
		(key
			(line))
		(list)))

===
20= curly brackets open a dictionary context
===
{any <chars> # [except] @ {LF} allowed}
---
(file
	(entry
		(key
			(line))
		(dict)))

===
21= keys can contain LF chars
===
@
	this key has 2 lines
	after the key put empty brackets...
<>
	angle for text, square for list, curly for dict
---
(file
	(entry
		(key
			(line)
			(line))
		(text
			(line))))
