grammar/test/corpus/items.txt
===
one empty text item
===
[]
	<>
---
(file
	(entry
		(list
			(text
				(line)))))

===
one item of short text
===
[]
	reserved chars #/@=<>[]{} TABs are fine in one-liner short text...
	<>
		#EXCEPT for 1st char
---
(file
	(entry
		(list
			(text
				(line))
			(text
				(line)))))

===
items can be dicts/lists
===
[]
	{}
		one=1
		two=2
	[]
		one=1
		two=2
---
(file
	(entry
		(list
			(list
				(entry
					(text
						(line)))
				(entry
					(text
						(line))))
			(list
				(text
					(line))
				(text
					(line))))))

===
but items don't have keys - dict
:error
===
[]
	{error}
		key=value
---

===
but items don't have keys - list
:error
===
[]
	[error]
		line
---

